// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates a \`.js\` service 1`] = `
"import Service from "@ember/service";

export default class Foo extends Service {}
"
`;

exports[`generates a \`.js\` service at a custom path 1`] = `
"import Service from "@ember/service";

export default class Foo extends Service {}
"
`;

exports[`generates a \`.ts\` service 1`] = `
"import Service from "@ember/service";

export default class Foo extends Service {}

declare module "@ember/service" {
  interface Registry {
    "foo": Foo;
  }
}
"
`;

exports[`generates a \`.ts\` service at a custom path 1`] = `
"import Service from "@ember/service";

export default class Foo extends Service {}

declare module "@ember/service" {
  interface Registry {
    "foo": Foo;
  }
}
"
`;
